--- a/styles.css
+++ b/styles.css
@@ -5,79 +5,112 @@
     list-style: none;
 }
 
-:root{
-    --color-primary: #191d2b;
-    --color-secondayr: #27ae60;
-    --color-white: #ffffff;
-    --color-black: #000;
-    --color-gray-1: #f8f8f8;
-    --color-gray-2: #dbele8;
-    --color-gray-3: #b2becd;
-    --color-gray-4: #454e56;
-    --color-gray-5: #2a2e35;
-    --color-gray-6: #12181b;
-    --br-sm-2: 14px; 
+:root {
+  --color-primary: #191d2b;
+  --color-secondary: #27AE60;
+  --color-white: #FFFFFF;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #dbe1e8;
+  --color-grey-2: #b2becd;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #2a2e35;
+  --color-grey-6: #12181b;
+  --br-sm-2: 14px;
+  --box-shadow-1: 0 3px 15px rgba(0,0,0,.3);
 }
-body{
-    background-color: var(--color-primary);
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.1rem;
-    color: var(--color-white);
-    transition: all .4s ease-in-out;
-}
-a{
-    display: inline-block;
-    text-decoration: none;
-    color: inherit;
-    font-family: inherit;
 
+body {
+  background-color: var(--color-primary);
+  font-family: "Poppins", sans-serif;
+  font-size: 1.1rem;
+  color: var(--color-white);
+  transition: all 0.4s ease-in-out;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: inherit;
+  font-family: inherit;
 }
 
 header{
     height: 100vh;
     color: var(--color-white);
     overflow: hidden;
+    padding: 0;
 }
 
-section{
-    min-height: 100vh;
-    width: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    padding: 3rem 18rem;
+
+section {
+  min-height: 100vh;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 3rem 18rem;
 }
 
-.section{
-    transform: translate(-100%) scale(0);
-    transition: all .4s ease-in-out;
-    background-color: var(--color-primary);
+.container {
+  display: none;
+  transform: translateY(-100%) scale(0);
+  transition: all 0.4s ease-in-out;
+  background-color: var(--color-primary);
 }
 
-.sec1{display: none;
+/* .sec1{display: none;
     transform: translateY(0) scale(1);
+} */
+
+.active {
+  display: block;
+  animation: appear 1s ease-in-out;
+  transform: translateY(0) scaleY(1);
 }
 
-/* controls */
-
-.control {
-    position: fixed;
-    z-index: 10;
-    top: 50%;
-    right: 3%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-    transform: translateY(-50%);
-    padding: 1rem;
-    cursor: pointer;
-    background-color: var(--color-grey-4);
-    width: 55px;
-    border-radius: 50%;
-}
 
 svg{
     height: 50px;
     width: 50px;
 }
+@keyframes appear {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+  }
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
+}
+
+.controls {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  right: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+}
+.controls .control {
+  padding: 1rem;
+  cursor: pointer;
+  background-color: var(--color-grey-4);
+  width: 55px;
+  height: 55px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.7rem 0;
+  box-shadow: var(--box-shadow-1);
+}
+.controls .control i {
+  font-size: 1.2rem;
+  color: var(--color-grey-2);
+  pointer-events: none;
+}
+
